--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>
-      Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
-      único.
-    </h1>
+    <section class="principal">
+      <h1>
+        Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um
+        preço único.
+      </h1>
+      <img
+        src="img/Combo.png"
+        alt="O combo+ é a junção do alulra+ e o alura língua."
+      />
+    </section>
   </body>
 </html>
