--- a/index.html
+++ b/index.html
@@ -36,5 +36,20 @@
         </p>
       </div>
     </section>
+
+    <section class="container secundario">
+      <img
+        src="img/Plataformas.png"
+        alt="Um monitor e um celular com o alura plus aberto"
+        class="secundario__imagem"
+      />
+      <div class="container_descricao">
+        <h1 class="descricao__titulo">Assista do seu jeito</h1>
+        <p class="descricao__texto">
+          Aproveite a tela grande da TV ou assista no tablet, laptop, celular e
+          outros aparelhos. Nossa seleção de cursos não para de crescer.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
