adiciona section dispositivos e finalizar ela

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <section class="dispositivos">
       <div>
-        <h2>Disponível nos seus dispositivos favoritos</h2>
+        <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
         <ul class="dispositivos__lista">
           <li>
             <img src="img/tv.png" alt="ícone de televisão">
